[package]
name = "ptx-90-parser-span-derive"
version = "0.1.0"
edition = "2024"
description = "Derive the Spanned helper trait used throughout ptx-90-parser AST types."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jialunzhang-psu/ptx-90-parser"
homepage = "https://github.com/jialunzhang-psu/ptx-90-parser"
documentation = "https://docs.rs/ptx-90-parser-span-derive"
keywords = ["ptx", "parser", "proc-macro"]

[lib]
name = "ptx_90_parser_span_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
